--- a/cart.html
+++ b/cart.html
@@ -4,30 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fruktur&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/cart.css">
     <title>Cart Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light background-color">
       <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="index.html">Peco</a>
+        <a class="navbar-brand text-light" href="index.html">Peco</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark" href="about.html">About</a>
+              <a class="nav-link text-light" href="about.html">About</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 More
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="cart.html">Cart</a></li>
+                <li><a class="dropdown-item text-dark" href="cart.html">Cart</a></li>
                 <li><a class="dropdown-item" href="ProductListingPage.html">Product Listing Page</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="checkout.html">Check Out</a></li>
@@ -36,11 +42,53 @@
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success text-dark border-dark" type="submit">Search</button>
+            <button class="btn btn-outline-success text-light border-light" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
+    <div class="p-4 text-center"><h1 class="fruktur">Your Cart</h1></div>
+    <h3 class="text-center irish-grover">You added two items in your cart, add other two items to have a big discount</h3>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card border border-solid border-5 border-dark">
+          <img src="https://www.nicekicks.com/files/2020/07/air-jordan-1-mid-chicago-554724-173-release-date-00.jpg" class="card-img-top" height="550" alt="...">
+          <div class="card-body background-color text-light border border-solid border-5 border-dark">
+            <h5 class="card-title text-center">Jordan 1 Mid Chicago</h5>
+            <p class="card-text">You added to your cart one of the most important pair of shoes of the century. I hope you will give them the respect they reserve. Remember that Michael Jordan wore them</p>
+            <p class="card-text"><small class="text-light">Added 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border border-solid border-5 border-dark">
+          <img src="https://m.media-amazon.com/images/I/61X6RGVOrfL._AC_UX522_.jpg" class="card-img-top" height="550" alt="...">
+          <div class="card-body background-color text-light border border-solid border-5 border-dark">
+            <h5 class="card-title text-center">White Nike Socks</h5>
+            <p class="card-text">You added to your bag some pair of white nike socks. They are very resistant and comfortable. Thet will match perfectly with your pair of Jordan 1 Mid Chicago!</p>
+            <p class="card-text"><small class="text-light">Added 1 min ago</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border border-solid border-5 border-dark">
+          <div class="card-body background-color text-light border border-solid border-5 border-dark">
+            <h5 class="card-title">Empty Spot</h5>
+            <p class="card-text">Add something, if you get 4 items, extra discount for you!</p>
+            <a href="ProductListingPage.html" class="btn btn-secondary">Add Something</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border border-solid border-5 border-dark">
+          <div class="card-body background-color text-light border border-solid border-5 border-dark">
+            <h5 class="card-title">Empty Spot</h5>
+            <p class="card-text">Add something, if you get 4 items, extra discount for you!</p>
+            <a href="ProductListingPage.html" class="btn btn-secondary">Add Something</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
   </body>
 </html>
