--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crafty+Girls&display=swap" rel="stylesheet">
+    
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <title>Home Page</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-md  navbar-light background-color">
         <div class="container-fluid">
-          <a class="navbar-brand text-light" href="index.html">Peco</a>
+          <a class="navbar-brand text-light " href="index.html">Peco</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,14 +30,14 @@
                 <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="about.html">About</a>
+                <a class="nav-link text-light" href="about.html" >About</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   More
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="cart.html">Cart</a></li>
+                  <li><a class="dropdown-item" href="cart.html" >Cart</a></li>
                   <li><a class="dropdown-item" href="ProductListingPage.html">Product Listing Page</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="checkout.html">Check Out</a></li>
@@ -49,14 +53,14 @@
       </nav>
       <div class="p-3"></div>
       <div class="hero h-100vh d-flex flex-column align-items-center img-fluid">
-        <h1 class="background-color text-white py-1 display-3 mx-5 mx-lg-0 px-5 text-center justify-content-center mt-5 peco-border"> Peco <h5 class="text-dark bebas-neue">The best equipped shop of basketball shoes of New York</h5></h1>
-        <div class=>
+        <h1 class="text-dark py-1 display-3 mx-5 mx-lg-0 px-5 text-center justify-content-center mt-5 Crafty-girls glow"> Peco <h5 class="text-dark bebas-neue">The best equipped shop of basketball shoes of New York</h5></h1>
+        <div>
             <button type="button" class="btn btn-dark me-3 background-color submit-border">Main  Menu</button>
             <button type="button" class="btn btn-dark background-color submit-border">Order Online</button>
         </div>
       </div>
       <div class="p-4"></div>
-      <h5 class="abril-fatface text-center">Our products</h5>
+      <h1 class="abril-fatface text-center">Main Division of Our Products</h1>
       <div class="p-3"></div>
       <div class="d-flex justify-content-between flex-wrap bg-light">
         <div class="card text-dark text-center border-color bg-light shadow p-3 mb-5 mx-auto peco-border" style="width: 18rem;">
